immich/immich-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
spec:
  ingressClassName: traefik  # Specify the Ingress class here
  rules:
    - host: immich.home.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich
                port:
                  number: 3000
